--- a/Project-00/TryApp-0/android/app/build.gradle
+++ b/Project-00/TryApp-0/android/app/build.gradle
@@ -40,7 +40,11 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
+    //firebase
+    implementation platform('com.google.firebase:firebase-bom:31.5.0')
+    implementation 'com.google.firebase:firebase-analytics'
 }
+
 
 apply from: 'capacitor.build.gradle'
 
