--- a/Project-00/justaServer/package.json
+++ b/Project-00/justaServer/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "cros": "^1.0.1",
     "express": "^4.18.2",
+    "firebase-admin": "^11.7.0",
+    "firebase-functions": "^4.3.1",
     "nodemon": "^2.0.22"
   }
 }
