--- a/Project-00/TryApp-0/android/app/src/main/AndroidManifest.xml
+++ b/Project-00/TryApp-0/android/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/justa_logo_removebg"
+        android:label="Galact-Mobile"
+        android:roundIcon="@drawable/justa_logo_removebg"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
