--- a/Project-00/TryApp-0/android/app/src/main/AndroidManifest.xml
+++ b/Project-00/TryApp-0/android/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/justa_logo_removebg"
+        android:label="Galaticos Team"
+        android:roundIcon="@drawable/justa_logo_removebg"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -37,5 +37,14 @@
 
     <!-- Permissions -->
 
-    <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <uses-permission android:name="com.example.towntour.permission.MAPS_RECEIVE" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <uses-permission android:name="android.permission.CALL_PHONE" />
+  <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+  <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+
 </manifest>
